--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <h2>Video Tutorial</h2>
       <p>If you're having trouble, watch this video for a step-by-step guide:</p>
       <div class="video-container">
-        <iframe src="./video1.mp4" frameborder="0" allowfullscreen></iframe>
+        <iframe path="./video1.mp4" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
   </div>
