--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <div class="payment-plans">
       <div class="plan premium">
         <h2>Special Plan</h2>
-        <p class="price">₹199</p>
+        <p class="price">₹149</p>
         <ul class="advantages">
           <li>All episodes available</li>
           <li>1080p HD videos</li>
@@ -125,7 +125,7 @@
           <li>Lifetime content access</li>
           <li>Accessible via Telegram</li>
         </ul>
-        <button class="btn-purchase" onclick="purchasePlan()">Best</button>
+        <button class="btn-purchase" onclick="purchasePlan()">Continue</button>
       </div>
     </div>
     <div class="note">
@@ -143,8 +143,9 @@
       </ol>
       <p>After completing the payment, please send the generated <strong>amazon link</strong> to us on Telegram or Instagram for further communication.</p>
       <div class="contact-info">
-        <p><strong>Telegram ID:</strong> <a href="https://t.me/Sridharroyal" target="_blank">@YourTelegramID</a></p>
-        <p><strong>Instagram ID:</strong> <a href="https://www.instagram.com/i_love_great_epic_mahabharat/" target="_blank">@YourInstagramID</a></p>
+        <p><strong>Telegram ID:</strong> <a href="https://t.me/Sridharroyal" target="_blank">@Sridharroyal</a></p>
+        <p><strong>Instagram ID:</strong> <a href="https://www.instagram.com/i_love_great_epic_ramayan/" target="_blank">@i_love_great_epic_ramayan</a></p>
+        <p><strong>Instagram ID:</strong> <a href="https://www.instagram.com/i_love_great_epic_mahabharat/" target="_blank">@i_love_great_epic_mahabharat</a></p>
       </div>
     </div>
     <div class="video-tutorial">
@@ -158,7 +159,7 @@
 
   <script>
     function purchasePlan() {
-      alert('Thank you for your purchase! You will receive the access details shortly.');
+      alert('Thank you for your intrest ! scroll down and follow the steps and after the payment contact us with link and share it with us You will receive the access details shortly.');
       // Implement the purchase logic here, such as redirecting to a payment gateway.
     }
   </script>
