--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
   <script>
     function purchasePlan() {
-      alert('Thank you for your intrest ! scroll down and follow the steps and after the payment contact us with link and share it with us You will receive the access details shortly.');
+      alert('Thank you for your intrest ! scroll down and follow the steps and after the payment contact us with link and You will receive the access details shortly.');
       // Implement the purchase logic here, such as redirecting to a payment gateway.
     }
   </script>
