--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <title>Payment Gateway</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Arial', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f5f5f5;
+      background-color: #f8f9fa;
       color: #333;
     }
     .container {
-      max-width: 1200px;
+      max-width: 100%;
       margin: 0 auto;
       padding: 20px;
       text-align: center;
@@ -24,6 +24,7 @@
     .payment-plans {
       display: flex;
       justify-content: space-around;
+      flex-wrap: wrap;
       margin-bottom: 40px;
     }
     .plan {
@@ -32,18 +33,21 @@
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       transition: transform 0.3s;
+      margin-bottom: 20px;
     }
     .plan:hover {
       transform: translateY(-5px);
     }
     .price {
       font-size: 24px;
-      color: #ff7043;
+      color: #ff6b6b;
+      margin-bottom: 10px;
     }
     .advantages {
       list-style: none;
       padding: 0;
       margin-top: 20px;
+      text-align: left;
     }
     .advantages li {
       font-size: 1.1em;
@@ -79,7 +83,7 @@
       margin-bottom: 10px;
     }
     .contact-info {
-      margin-top: 10px;
+      margin-top: 20px;
     }
     .contact-info p {
       font-size: 1.1em;
@@ -107,6 +111,9 @@
       .plan {
         flex-basis: 80%;
       }
+      .container {
+        padding: 10px;
+      }
     }
   </style>
 </head>
@@ -116,7 +123,7 @@
     <!-- Select Your Payment Plan Section -->
     <div class="payment-plans">
       <div class="plan premium">
-        <h2>Special Plan</h2>
+        <h2 style="color: #6a4c93;">Special Plan</h2>
         <p class="price">₹149</p>
         <ul class="advantages">
           <li>All episodes available</li>
@@ -135,7 +142,7 @@
       <h2>How to Pay?</h2>
       <p>Follow these steps to make a payment using Amazon:</p>
       <ol>
-        <li>Go to this <a href="https://www.amazon.in/Our-Gift-You-mail-Amazon/dp/B00JPXXBOA/" target="_blank">Amazon link</a>.</li>
+        <li>Go to this <a href="https://www.amazon.in/Our-Gift-You-mail-Amazon/dp/B00JPXXBOA/" target="_blank" style="color: #6a4c93;">Amazon link</a>.</li>
         <li>Enter the desired amount and select <strong>share via link</strong> option in the Delivery section.</li>
         <li>Make the payment using UPI app or any other method available by clicking the <strong>Buy Now</strong> option.</li>
         <li>Click on <strong>Share Link</strong>, after the payment was successful.</li>
@@ -143,9 +150,9 @@
       </ol>
       <p>After completing the payment, please send the generated <strong>amazon link</strong> to us on Telegram or Instagram for further communication.</p>
       <div class="contact-info">
-        <p><strong>Telegram ID:</strong> <a href="https://t.me/Sridharroyal" target="_blank">@Sridharroyal</a></p>
-        <p><strong>Instagram ID:</strong> <a href="https://www.instagram.com/i_love_great_epic_ramayan/" target="_blank">@i_love_great_epic_ramayan</a></p>
-        <p><strong>Instagram ID:</strong> <a href="https://www.instagram.com/i_love_great_epic_mahabharat/" target="_blank">@i_love_great_epic_mahabharat</a></p>
+        <p><strong>Telegram ID:</strong> <a href="https://t.me/Sridharroyal" target="_blank" style="color: #6a4c93;">@Sridharroyal</a></p>
+        <p><strong>Instagram ID (1):</strong> <a href="https://www.instagram.com/i_love_great_epic_ramayan/" target="_blank" style="color: #6a4c93;">@i_love_great_epic_ramayan</a></p>
+        <p><strong>Instagram ID (2):</strong> <a href="https://www.instagram.com/i_love_great_epic_mahabharat/" target="_blank" style="color: #6a4c93;">@i_love_great_epic_mahabharat</a></p>
       </div>
     </div>
     <div class="video-tutorial">
@@ -165,3 +172,4 @@
   </script>
 </body>
 </html>
+
