--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       list-style: none;
       padding: 0;
       margin-top: 20px;
-      text-align: left;
+      text-align: center;
     }
     .advantages li {
       font-size: 1.1em;
@@ -152,9 +152,9 @@
       </ol>
       <p class="animate__animated animate__fadeInLeft">After completing the payment, please send the generated <strong>amazon link</strong> to us on Telegram or Instagram any one for further communication.</p>
       <div class="contact-info">
-        <p><strong>Telegram ID:</strong> <a href="https://t.me/Sridharroyal" target="_blank" style="color: #6a4c93;">@Sridharroyal</a></p>
-        <p><strong>Instagram ID:</strong> <a href="https://www.instagram.com/i_love_great_epic_ramayan/" target="_blank" style="color: #6a4c93;">@i_love_great_epic_ramayan</a></p>
-        <p><strong>Instagram ID:</strong> <a href="https://www.instagram.com/i_love_great_epic_mahabharat/" target="_blank" style="color: #6a4c93;">@i_love_great_epic_mahabharat</a></p>
+        <p><strong>Telegram ID:</strong> <a href="https://t.me/Sridharroyal" target="_blank" style="color: #6a4c93;">click here</a></p>
+        <p><strong>Instagram ID:</strong> <a href="https://www.instagram.com/i_love_great_epic_ramayan/" target="_blank" style="color: #6a4c93;">click here</a></p>
+        <p><strong>Instagram ID:</strong> <a href="https://www.instagram.com/i_love_great_epic_mahabharat/" target="_blank" style="color: #6a4c93;">click here</a></p>
       </div>
     </div>
     <div class="video-tutorial">
