--- a/index.html
+++ b/index.html
@@ -90,6 +90,20 @@
     .contact-info p {
       font-size: 1.1em;
     }
+    .btn-contact {
+      display: inline-block;
+      margin: 10px 5px;
+      padding: 10px 20px;
+      background-color: #6a4c93;
+      color: #fff;
+      border-radius: 5px;
+      text-decoration: none;
+      font-size: 1.1em;
+      transition: background-color 0.3s;
+    }
+    .btn-contact:hover {
+      background-color: #5a3a73;
+    }
     .video-tutorial {
       margin-top: 40px;
     }
@@ -152,9 +166,9 @@
       </ol>
       <p class="animate__animated animate__fadeInLeft">After completing the payment, please send the generated <strong>amazon link</strong> to us on Telegram or Instagram any one for further communication.</p>
       <div class="contact-info">
-        <p><strong>Telegram ID:</strong> <a href="https://t.me/Sridharroyal" target="_blank" style="color: #6a4c93;">click here</a></p>
-        <p><strong>Instagram ID:</strong> <a href="https://www.instagram.com/i_love_great_epic_ramayan/" target="_blank" style="color: #6a4c93;">click here</a></p>
-        <p><strong>Instagram ID:</strong> <a href="https://www.instagram.com/i_love_great_epic_mahabharat/" target="_blank" style="color: #6a4c93;">click here</a></p>
+        <a class="btn-contact" href="https://t.me/Sridharroyal" target="_blank">Contact on Telegram</a>
+        <a class="btn-contact" href="https://www.instagram.com/i_love_great_epic_ramayan/" target="_blank">Instagram: Ramayan</a>
+        <a class="btn-contact" href="https://www.instagram.com/i_love_great_epic_mahabharat/" target="_blank">Instagram: Mahabharat</a>
       </div>
     </div>
     <div class="video-tutorial">
@@ -168,10 +182,11 @@
 
   <script>
     function purchasePlan() {
-      alert('Thank you for your intrest ! scroll down and follow the steps and after the payment contact us with link and You will receive the access details shortly.');
+      alert('Thank you for your interest! Scroll down and follow the steps. After the payment, contact us with the link and you will receive the access details shortly.');
       // Implement the purchase logic here, such as redirecting to a payment gateway.
     }
   </script>
 </body>
 </html>
+
 
